# dataplane-flowstat-plugin

./: LICENSE  README.md  meson.build  meson_options.txt
debian/: .gitignore  changelog  control  copyright  dataplane-flowstat-plugin.install  libdataplane-flowstat-plugin-proto-support.install  rules
protobuf/: FlowStatFeatConfig.proto  FlowStatFeatOp.proto  meson.build
src/: flowstat.c  flowstat.h
tests/: meson.build
tests/src/: dp_test_lib_tcp.h  dp_test_npf_lib.h  dp_test_pipeline_flowstat.c  dp_test_session_internal_lib.h  util.h
tests/src/pcap/: gen_pkt.py
